--- a/app/styles/ember-power-select-custom.scss
+++ b/app/styles/ember-power-select-custom.scss
@@ -76,6 +76,7 @@
 
 .ember-power-select-trigger {
   display: block;
+  overflow: hidden;
   width: 100%;
   min-height: 3rem;
   padding: 0.3rem 0.5rem;
