--- a/app/components/timed-clock/styles.scss
+++ b/app/components/timed-clock/styles.scss
@@ -1,49 +1,25 @@
-.clock {
-  width:  50px;
-  height: 50px;
-  border: 3px solid rgb(87,87,87);
-  box-shadow: 0 1px 5px rgba(23, 23, 23, 0.5), 0 1px 5px rgba(23, 23, 23, 0.5) inset;
-  border-radius: 50%;
-  position: relative;
+& {
+  --clock-size: 50px;
+  --clock-color: rgb(87,87,87);
+  --clock-color-secondary: rgb(217,83,79);
+
+  width: var(--clock-size);
+  height: var(--clock-size);
 }
 
-.clock::after {
-  content: '';
-  position: absolute;
-  top:  50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  width:  5px;
-  height: 5px;
-  border-radius: 50%;
-  background: rgb(87,87,87);
+.circle {
+  fill: transparent;
+  stroke: var(--clock-color);
 }
 
-.clock .hour,
-.clock .minute,
-.clock .second {
-  position: absolute;
-  width:  0;
-  height: 0;
-  top:  50%;
-  left: 50%;
-  transform-origin: 50% 100% 0;
-  background: rgb(87,87,87);
+.hour {
+  stroke: var(--clock-color);
 }
 
-.clock .hour {
-  margin: -1.5px 0 -1.5px -35%;
-  padding: 1.5px 0  1.5px  35%;
-  transform-origin: 100% 50% 0;
+.minute {
+  stroke: var(--clock-color);
 }
 
-.clock .minute {
-  margin: -40% -1.25px 0;
-  padding: 40%  1.25px 0;
-}
-
-.clock .second {
-  margin: -40% -1px 0 0;
-  padding: 40%  1px 0;
-  background-color: var(--color-danger);
+.second {
+  stroke: var(--clock-color-secondary);
 }
