--- a/app/components/tracking-bar/styles.scss
+++ b/app/components/tracking-bar/styles.scss
@@ -10,6 +10,10 @@
     display: flex;
     flex-direction: row;
 
+    .form-group {
+      margin-bottom: 0;
+    }
+
     .form-group:not(:last-child) {
       margin-right: 0.5rem;
     }
