--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -247,3 +247,35 @@ body {
     color: inherit;
   }
 }
+
+.filter-page {
+  display: flex;
+  flex: 1 1 100%;
+  flex-wrap: wrap;
+}
+
+.filter-page-sidebar,
+.filter-page-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.filter-page-sidebar {
+  flex: 0 1 100%;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+}
+
+.filter-page-content {
+  flex: 1 1 100%;
+  padding-left: 1rem;
+}
+
+@media (--md-viewport) {
+  .filter-page {
+    flex-wrap: nowrap;
+  }
+
+  .filter-page-sidebar { flex-basis: 20%; }
+  .filter-page-content { flex-basis: auto; }
+}
