--- a/app/statistics/template.hbs
+++ b/app/statistics/template.hbs
@@ -1,145 +1,185 @@
 <h1>Statistics</h1>
 
-<div>
-  {{#task-selection
-    history         = false
-    archived        = true
-    on-set-customer = (action 'setModelFilter' 'customer')
-    on-set-project  = (action 'setModelFilter' 'project')
-    on-set-task     = (action 'setModelFilter' 'task')
-    initial         = (hash
-      customer      = selectedCustomer
-      project       = selectedProject
-      task          = selectedTask
-    )
-  as |t|}}
-    <div class="grid grid-xl--2of12 grid-lg--4of12 grid-sm--6of12 grid--12of12">
-      <div class="grid-cell form-group" data-test-filter-customer>
-        {{t.customer}}
-      </div>
-      <div class="grid-cell form-group" data-test-filter-project>
-        {{t.project}}
-      </div>
-      <div class="grid-cell form-group" data-test-filter-task>
-        {{t.task}}
-      </div>
-      <div class="grid-cell form-group" data-test-filter-user>
-        {{#user-selection
-          inactive  = true
-          user      = selectedUser
-          on-change = (action 'setModelFilter' 'user')
-        as |u|}}
-          {{u.user}}
-        {{/user-selection}}
-      </div>
-      <div class="grid-cell form-group" data-test-filter-reviewer>
-        {{#user-selection
-          inactive  = true
-          user      = selectedReviewer
-          on-change = (action 'setModelFilter' 'reviewer')
-        as |u|}}
-          {{u.user placeholder='Select reviewer...'}}
-        {{/user-selection}}
-      </div>
-      <div class="grid-cell form-group" data-test-filter-billing-type>
-        {{one-way-select selectedBillingType
-          class           = 'form-control'
-          update          = (action 'setModelFilter' 'billingType')
-          options         = billingTypes
-          prompt          = 'All billing types'
-          optionValuePath = 'id'
-          optionLabelPath = 'name'
-        }}
-      </div>
-      <div class="grid-cell form-group" data-test-filter-cost-center>
-        {{one-way-select selectedCostCenter
-          class           = 'form-control'
-          update          = (action 'setModelFilter' 'costCenter')
-          options         = costCenters
-          prompt          = 'All cost centers'
-          optionValuePath = 'id'
-          optionLabelPath = 'name'
-        }}
-      </div>
-      <div class="grid-cell form-group" data-test-filter-from-date>
-        {{sy-datepicker
-          value       = fromDate
-          on-change   = (action (mut fromDate))
-          placeholder = 'From date'
-        }}
-      </div>
-      <div class="grid-cell form-group" data-test-filter-to-date>
-        {{sy-datepicker
-          value       = toDate
-          on-change   = (action (mut toDate))
-          placeholder = 'To date'
-        }}
-      </div>
-      <div class="grid-cell form-group" data-test-filter-review>
-        {{one-way-select (hash value=review)
-          class   = 'form-control'
-          update  = (action (mut review) value='value')
-          options = (array
-            (hash value='' label='Not filtered by review needed')
-            (hash value='1' label='Only review needed')
-            (hash value='0' label='Only review not needed')
-          )
-          optionValuePath = 'value'
-          optionLabelPath = 'label'
-        }}
-      </div>
-      <div class="grid-cell form-group" data-test-filter-not-billable>
-        {{one-way-select (hash value=notBillable)
-          class   = 'form-control'
-          update  = (action (mut notBillable) value='value')
-          options = (array
-            (hash value='' label='Not filtered by billability')
-            (hash value='0' label='Only billable')
-            (hash value='1' label='Only not billable')
-          )
-          optionValuePath = 'value'
-          optionLabelPath = 'label'
-        }}
-      </div>
-      <div class="grid-cell form-group" data-test-filter-not-verified>
-        {{one-way-select (hash value=notVerified)
-          class   = 'form-control'
-          update  = (action (mut notVerified) value='value')
-          options = (array
-            (hash value='' label='Not filtered by verification')
-            (hash value='0' label='Only verified')
-            (hash value='1' label='Only unverified')
-          )
-          optionValuePath = 'value'
-          optionLabelPath = 'label'
-        }}
-      </div>
-      <div class="grid-cell" data-test-filter-reset>
-        <button class="btn" type="button" {{action (queue (action 'reset') t.clear)}}>Reset filter</button>
-      </div>
+<div class="filter-page">
+  <div class="filter-page-sidebar">
+    {{#task-selection
+      history         = false
+      archived        = true
+      on-set-customer = (action 'setModelFilter' 'customer')
+      on-set-project  = (action 'setModelFilter' 'project')
+      on-set-task     = (action 'setModelFilter' 'task')
+      initial         = (hash
+        customer      = selectedCustomer
+        project       = selectedProject
+        task          = selectedTask
+      )
+    as |t|}}
+      {{#filter-sidebar
+        appliedCount = appliedFilters.length
+        on-reset     = (action (queue t.clear (action 'reset')))
+      as |fs|}}
+        {{#fs.group label='Task' expanded=true}}
+          {{#fs.label}}
+            Customer
+            {{#fs.filter data-test-filter-customer}}
+              {{t.customer}}
+            {{/fs.filter}}
+          {{/fs.label}}
+          {{#fs.label}}
+            Project
+            {{#fs.filter data-test-filter-project}}
+              {{t.project}}
+            {{/fs.filter}}
+          {{/fs.label}}
+          {{#fs.label}}
+            Task
+            {{#fs.filter data-test-filter-task}}
+              {{t.task}}
+            {{/fs.filter}}
+          {{/fs.label}}
+        {{/fs.group}}
+        {{#fs.group label='Responsibility'}}
+          {{#fs.label}}
+            User
+            {{#fs.filter data-test-filter-user}}
+              {{#user-selection
+                inactive  = true
+                user      = selectedUser
+                on-change = (action 'setModelFilter' 'user')
+              as |u|}}
+                {{u.user}}
+              {{/user-selection}}
+            {{/fs.filter}}
+          {{/fs.label}}
+          {{#fs.label}}
+            Reviewer
+            {{#fs.filter data-test-filter-reviewer}}
+              {{#user-selection
+                user      = selectedReviewer
+                on-change = (action 'setModelFilter' 'reviewer')
+              as |u|}}
+                {{u.user placeholder='Select reviewer...'}}
+              {{/user-selection}}
+            {{/fs.filter}}
+          {{/fs.label}}
+        {{/fs.group}}
+        {{#fs.group label='Finances'}}
+          {{#fs.label}}
+            Billing type
+            {{fs.filter 'select'
+              data-test-filter-billing-type
+              selected  = billingType
+              valuePath = 'id'
+              labelPath = 'name'
+              prompt    = 'All billing types'
+              options   = billingTypes
+              on-change = (action (mut billingType))
+            }}
+          {{/fs.label}}
+          {{#fs.label}}
+            Cost center
+            {{fs.filter 'select'
+              data-test-filter-cost-center
+              selected  = costCenter
+              valuePath = 'id'
+              labelPath = 'name'
+              prompt    = 'All cost centers'
+              options   = costCenters
+              on-change = (action (mut costCenter))
+            }}
+          {{/fs.label}}
+        {{/fs.group}}
+        {{#fs.group label='Time range'}}
+          {{#fs.label}}
+            From
+            {{fs.filter 'date'
+              data-test-filter-from-date
+              selected  = fromDate
+              on-change = (action (mut fromDate))
+            }}
+          {{/fs.label}}
+          {{#fs.label}}
+            To
+            {{fs.filter 'date'
+              data-test-filter-to-date
+              selected  = toDate
+              on-change = (action (mut toDate))
+            }}
+          {{/fs.label}}
+        {{/fs.group}}
+        {{#fs.group label='State'}}
+          {{#fs.label}}
+            Review
+            {{fs.filter 'button'
+              data-test-filter-review
+              selected  = review
+              valuePath = 'value'
+              labelPath = 'label'
+              options = (array
+                (hash label='All' value='')
+                (hash label='Review needed' value='1')
+                (hash label='No review needed' value='0')
+              )
+              on-change = (action (mut review))
+            }}
+          {{/fs.label}}
+          {{#fs.label}}
+            Billability
+            {{fs.filter 'button'
+              data-test-filter-not-billable
+              selected  = notBillable
+              valuePath = 'value'
+              labelPath = 'label'
+              options = (array
+                (hash label='All' value='')
+                (hash label='Billable' value='0')
+                (hash label='Unbillable' value='1')
+              )
+              on-change = (action (mut notBillable))
+            }}
+          {{/fs.label}}
+          {{#fs.label}}
+            Verified
+            {{fs.filter 'button'
+              data-test-filter-not-verified
+              selected  = notVerified
+              valuePath = 'value'
+              labelPath = 'label'
+              options = (array
+                (hash label='All' value='')
+                (hash label='Verified' value='0')
+                (hash label='Not verified' value='1')
+              )
+              on-change = (action (mut notVerified))
+            }}
+          {{/fs.label}}
+        {{/fs.group}}
+      {{/filter-sidebar}}
+    {{/task-selection}}
+  </div>
+
+  <div class="filter-page-content">
+    <div>
+      <ul class="nav-tabs">
+        {{#each types as |t|}}
+          <li>
+            <a href="#" class={{if (eq t type) 'active'}} {{action (mut type) t}}>
+              By {{t}}
+            </a>
+          </li>
+        {{/each}}
+      </ul>
     </div>
-  {{/task-selection}}
-</div>
 
-<div>
-  <ul class="nav-tabs">
-    {{#each types as |t|}}
-      <li>
-        <a href="#" class={{if (eq t type) 'active'}} {{action (mut type) t}}>
-          By {{t}}
-        </a>
-      </li>
-    {{/each}}
-  </ul>
-</div>
-
-<div class="tab-content grid grid--12of12">
-  {{statistic-list
-    data               = data
-    type               = type
-    missingParams      = missingParams
-    ordering           = ordering
-    on-ordering-change = (action (mut ordering))
-    class              = 'grid-cell'
-  }}
+    <div class="tab-content grid">
+      {{statistic-list
+        data               = data
+        type               = type
+        missingParams      = missingParams
+        ordering           = ordering
+        class              = 'grid-cell'
+        on-ordering-change = (action (mut ordering))
+      }}
+    </div>
+  </div>
 </div>
