Add missing class on search filter

--- a/app/components/filter-sidebar/filter/template.hbs
+++ b/app/components/filter-sidebar/filter/template.hbs
@@ -20,6 +20,7 @@
 {{else if (eq type 'search')}}
   <input
     type="search"
+    class="form-control"
     placeholder={{if placeholder placeholder 'Search'}}
     name={{if name name 'search'}}
     value={{selected}}
