Add analysis page with infinite scrolling and async export

--- a/app/components/filter-sidebar/group/template.hbs
+++ b/app/components/filter-sidebar/group/template.hbs
@@ -1,4 +1,4 @@
-<div class="filter-sidebar-group-label" {{action 'toggle' on='click'}}>
+<div class="filter-sidebar-group-label" {{action (toggle 'expanded' this) on='click'}}>
   {{label}}
   {{fa-icon 'angle-right'}}
 </div>
