--- a/app/components/sy-topnav/template.hbs
+++ b/app/components/sy-topnav/template.hbs
@@ -15,6 +15,11 @@
       {{/link-to}}
     </li>
     <li class="nav-top-list-item">
+      {{#link-to 'analysis'}}
+        {{fa-icon 'line-chart'}} Analysis
+      {{/link-to}}
+    </li>
+    <li class="nav-top-list-item">
       {{#link-to 'statistics'}}
         {{fa-icon 'bar-chart'}} Statistics
       {{/link-to}}
