--- a/app/components/filter-sidebar/group/styles.scss
+++ b/app/components/filter-sidebar/group/styles.scss
@@ -12,9 +12,12 @@
   color: var(--body-color);
 }
 
+&.filter-sidebar-group--expanded .filter-sidebar-group-body {
+  max-height: 400px;
+}
+
 .filter-sidebar-group-label {
   display: flex;
-  flex: 1 0 100%;
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
