--- a/app/components/sy-topnav/styles.scss
+++ b/app/components/sy-topnav/styles.scss
@@ -8,9 +8,20 @@
   margin-right: .3rem;
 }
 
+
 @media (--nav-top-mobile-width) {
   .nav-top-header-title {
     display: block;
+  }
+
+  .nav-top-list-item a.active {
+    background-color: var(--color-primary);
+    color: #fff;
+  }
+
+  .nav-top-list-item a:hover {
+    background-color: color(var(--color-primary) tint(20%));
+    color: #fff;
   }
 
   .nav-top-list-item a {
