--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,6 +11,7 @@
 
 /* Custom styles */
 @import 'activities';
+@import 'analysis';
 @import 'attendances';
 @import 'badge';
 @import 'form-list';
@@ -233,18 +234,21 @@
   display: flex;
   flex: 1 1 100%;
   flex-wrap: wrap;
+  min-height: 0;
 }
 
 .filter-page-sidebar,
 .filter-page-content {
   display: flex;
   flex-direction: column;
+  min-height: 0;
 }
 
 .filter-page-sidebar {
-  flex: 0 1 100%;
+  flex: 0 0 100%;
   padding-right: 1rem;
   padding-bottom: 1rem;
+  overflow-y: auto;
 }
 
 .filter-page-content {
