--- a/app/analysis/template.hbs
+++ b/app/analysis/template.hbs
@@ -226,6 +226,7 @@
                 <tr>
                   <td colspan="10" class="text-center">
                     {{#in-viewport
+                      rootSelector='analysis-scrollable-container'
                       on-enter-viewport=(perform loadNext)
                       on-exit-viewport=(action (mut _shouldLoadMore) false)
                     }}
@@ -241,6 +242,7 @@
           {{#each exportLinks as |link|}}
             <button {{action (perform download) notify allQueryParams jwt link}}
               type="button"
+              data-download-count="{{download.performCount}}"
               class="btn btn-primary {{if (and (eq download.last.url link.url) (eq download.last.params link.params) download.isRunning) 'loading'}}"
             >
               {{fa-icon 'download'}}&nbsp;{{link.label}}
