Fix wording to use less space

--- a/app/users/index/template.hbs
+++ b/app/users/index/template.hbs
@@ -34,8 +34,8 @@
             labelPath = 'label'
             options   = (array
               (hash value='' label='All')
-              (hash value='1' label='Only actives')
-              (hash value='0' label='Only inactives')
+              (hash value='1' label='Active')
+              (hash value='0' label='Inactive')
             )
             on-change = (action (mut active))
           }}
