--- a/app/analysis/index/template.hbs
+++ b/app/analysis/index/template.hbs
@@ -268,6 +268,27 @@
             </tbody>
           </table>
         {{/ember-scrollable}}
+        <table class="table table--striped table--analysis">
+          <colgroup>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col>
+          </colgroup>
+          <tfoot>
+            <tr>
+              <td colspan="2"><strong>Total:</strong></td>
+              <td colspan="2"><strong class="total">{{format-duration totalTime false}}</strong></td>
+              <td colspan="6" class="text-right"><em>Displaying {{reports.length}} of {{totalItems}} reports</em></td>
+            </tr>
+          </tfoot>
+        </table>
         <div class="export-buttons">
           {{#each exportLinks as |link|}}
             <button {{action (perform download) notify allQueryParams jwt link}}
