--- a/app/statistics/template.hbs
+++ b/app/statistics/template.hbs
@@ -1,185 +1,183 @@
-<h1>Statistics</h1>
+{{#if (or media.isMo media.isXs media.isSm)}}
+  {{no-mobile-message}}
+{{else}}
+  <h1>Statistics</h1>
 
-<div class="filter-page">
-  <div class="filter-page-sidebar">
-    {{#task-selection
-      history         = false
-      archived        = true
-      on-set-customer = (action 'setModelFilter' 'customer')
-      on-set-project  = (action 'setModelFilter' 'project')
-      on-set-task     = (action 'setModelFilter' 'task')
-      initial         = (hash
-        customer      = selectedCustomer
-        project       = selectedProject
-        task          = selectedTask
-      )
-    as |t|}}
-      {{#filter-sidebar
-        appliedCount = appliedFilters.length
-        on-reset     = (action (queue t.clear (action 'reset')))
-      as |fs|}}
-        {{#fs.group label='Task' expanded=true}}
-          {{#fs.label}}
-            Customer
-            {{#fs.filter data-test-filter-customer}}
-              {{t.customer}}
-            {{/fs.filter}}
-          {{/fs.label}}
-          {{#fs.label}}
-            Project
-            {{#fs.filter data-test-filter-project}}
-              {{t.project}}
-            {{/fs.filter}}
-          {{/fs.label}}
-          {{#fs.label}}
-            Task
-            {{#fs.filter data-test-filter-task}}
-              {{t.task}}
-            {{/fs.filter}}
-          {{/fs.label}}
-        {{/fs.group}}
-        {{#fs.group label='Responsibility'}}
-          {{#fs.label}}
-            User
-            {{#fs.filter data-test-filter-user}}
-              {{#user-selection
-                inactive  = true
-                user      = selectedUser
-                on-change = (action 'setModelFilter' 'user')
-              as |u|}}
-                {{u.user}}
-              {{/user-selection}}
-            {{/fs.filter}}
-          {{/fs.label}}
-          {{#fs.label}}
-            Reviewer
-            {{#fs.filter data-test-filter-reviewer}}
-              {{#user-selection
-                user      = selectedReviewer
-                on-change = (action 'setModelFilter' 'reviewer')
-              as |u|}}
-                {{u.user placeholder='Select reviewer...'}}
-              {{/user-selection}}
-            {{/fs.filter}}
-          {{/fs.label}}
-        {{/fs.group}}
-        {{#fs.group label='Finances'}}
-          {{#fs.label}}
-            Billing type
-            {{fs.filter 'select'
-              data-test-filter-billing-type
-              selected  = billingType
-              valuePath = 'id'
-              labelPath = 'name'
-              prompt    = 'All billing types'
-              options   = billingTypes
-              on-change = (action (mut billingType))
-            }}
-          {{/fs.label}}
-          {{#fs.label}}
-            Cost center
-            {{fs.filter 'select'
-              data-test-filter-cost-center
-              selected  = costCenter
-              valuePath = 'id'
-              labelPath = 'name'
-              prompt    = 'All cost centers'
-              options   = costCenters
-              on-change = (action (mut costCenter))
-            }}
-          {{/fs.label}}
-        {{/fs.group}}
-        {{#fs.group label='Time range'}}
-          {{#fs.label}}
-            From
-            {{fs.filter 'date'
-              data-test-filter-from-date
-              selected  = fromDate
-              on-change = (action (mut fromDate))
-            }}
-          {{/fs.label}}
-          {{#fs.label}}
-            To
-            {{fs.filter 'date'
-              data-test-filter-to-date
-              selected  = toDate
-              on-change = (action (mut toDate))
-            }}
-          {{/fs.label}}
-        {{/fs.group}}
-        {{#fs.group label='State'}}
-          {{#fs.label}}
-            Review
-            {{fs.filter 'button'
-              data-test-filter-review
-              selected  = review
-              valuePath = 'value'
-              labelPath = 'label'
-              options = (array
-                (hash label='All' value='')
-                (hash label='Needed' value='1')
-                (hash label='Not needed' value='0')
-              )
-              on-change = (action (mut review))
-            }}
-          {{/fs.label}}
-          {{#fs.label}}
-            Billability
-            {{fs.filter 'button'
-              data-test-filter-not-billable
-              selected  = notBillable
-              valuePath = 'value'
-              labelPath = 'label'
-              options = (array
-                (hash label='All' value='')
-                (hash label='Billable' value='0')
-                (hash label='Not billable' value='1')
-              )
-              on-change = (action (mut notBillable))
-            }}
-          {{/fs.label}}
-          {{#fs.label}}
-            Verified
-            {{fs.filter 'button'
-              data-test-filter-verified
-              selected  = verified
-              valuePath = 'value'
-              labelPath = 'label'
-              options = (array
-                (hash label='All' value='')
-                (hash label='Verified' value='1')
-                (hash label='Not verified' value='0')
-              )
-              on-change = (action (mut verified))
-            }}
-          {{/fs.label}}
-        {{/fs.group}}
-      {{/filter-sidebar}}
-    {{/task-selection}}
+  {{#task-selection
+    history         = false
+    archived        = true
+    on-set-customer = (action 'setModelFilter' 'customer')
+    on-set-project  = (action 'setModelFilter' 'project')
+    on-set-task     = (action 'setModelFilter' 'task')
+    initial         = (hash
+      customer      = selectedCustomer
+      project       = selectedProject
+      task          = selectedTask
+    )
+  as |t|}}
+    {{#filter-sidebar
+      appliedCount = appliedFilters.length
+      on-reset     = (action (queue t.clear (action 'reset')))
+    as |fs|}}
+      {{#fs.group label='Task' expanded=true}}
+        {{#fs.label}}
+          Customer
+          {{#fs.filter data-test-filter-customer}}
+            {{t.customer}}
+          {{/fs.filter}}
+        {{/fs.label}}
+        {{#fs.label}}
+          Project
+          {{#fs.filter data-test-filter-project}}
+            {{t.project}}
+          {{/fs.filter}}
+        {{/fs.label}}
+        {{#fs.label}}
+          Task
+          {{#fs.filter data-test-filter-task}}
+            {{t.task}}
+          {{/fs.filter}}
+        {{/fs.label}}
+      {{/fs.group}}
+      {{#fs.group label='Responsibility'}}
+        {{#fs.label}}
+          User
+          {{#fs.filter data-test-filter-user}}
+            {{#user-selection
+              inactive  = true
+              user      = selectedUser
+              on-change = (action 'setModelFilter' 'user')
+            as |u|}}
+              {{u.user}}
+            {{/user-selection}}
+          {{/fs.filter}}
+        {{/fs.label}}
+        {{#fs.label}}
+          Reviewer
+          {{#fs.filter data-test-filter-reviewer}}
+            {{#user-selection
+              user      = selectedReviewer
+              on-change = (action 'setModelFilter' 'reviewer')
+            as |u|}}
+              {{u.user placeholder='Select reviewer...'}}
+            {{/user-selection}}
+          {{/fs.filter}}
+        {{/fs.label}}
+      {{/fs.group}}
+      {{#fs.group label='Finances'}}
+        {{#fs.label}}
+          Billing type
+          {{fs.filter 'select'
+            data-test-filter-billing-type
+            selected  = billingType
+            valuePath = 'id'
+            labelPath = 'name'
+            prompt    = 'All billing types'
+            options   = billingTypes
+            on-change = (action (mut billingType))
+          }}
+        {{/fs.label}}
+        {{#fs.label}}
+          Cost center
+          {{fs.filter 'select'
+            data-test-filter-cost-center
+            selected  = costCenter
+            valuePath = 'id'
+            labelPath = 'name'
+            prompt    = 'All cost centers'
+            options   = costCenters
+            on-change = (action (mut costCenter))
+          }}
+        {{/fs.label}}
+      {{/fs.group}}
+      {{#fs.group label='Time range'}}
+        {{#fs.label}}
+          From
+          {{fs.filter 'date'
+            data-test-filter-from-date
+            selected  = fromDate
+            on-change = (action (mut fromDate))
+          }}
+        {{/fs.label}}
+        {{#fs.label}}
+          To
+          {{fs.filter 'date'
+            data-test-filter-to-date
+            selected  = toDate
+            on-change = (action (mut toDate))
+          }}
+        {{/fs.label}}
+      {{/fs.group}}
+      {{#fs.group label='State'}}
+        {{#fs.label}}
+          Review
+          {{fs.filter 'button'
+            data-test-filter-review
+            selected  = review
+            valuePath = 'value'
+            labelPath = 'label'
+            options = (array
+              (hash label='All' value='')
+              (hash label='Needed' value='1')
+              (hash label='Not needed' value='0')
+            )
+            on-change = (action (mut review))
+          }}
+        {{/fs.label}}
+        {{#fs.label}}
+          Billability
+          {{fs.filter 'button'
+            data-test-filter-not-billable
+            selected  = notBillable
+            valuePath = 'value'
+            labelPath = 'label'
+            options = (array
+              (hash label='All' value='')
+              (hash label='Billable' value='0')
+              (hash label='Not billable' value='1')
+            )
+            on-change = (action (mut notBillable))
+          }}
+        {{/fs.label}}
+        {{#fs.label}}
+          Verified
+          {{fs.filter 'button'
+            data-test-filter-verified
+            selected  = verified
+            valuePath = 'value'
+            labelPath = 'label'
+            options = (array
+              (hash label='All' value='')
+              (hash label='Verified' value='1')
+              (hash label='Not verified' value='0')
+            )
+            on-change = (action (mut verified))
+          }}
+        {{/fs.label}}
+      {{/fs.group}}
+    {{/filter-sidebar}}
+  {{/task-selection}}
+
+  <div>
+    <ul class="nav-tabs">
+      {{#each types as |t|}}
+        <li>
+          <a href="#" class={{if (eq t type) 'active'}} {{action (mut type) t}}>
+            By {{t}}
+          </a>
+        </li>
+      {{/each}}
+    </ul>
   </div>
 
-  <div class="filter-page-content">
-    <div>
-      <ul class="nav-tabs">
-        {{#each types as |t|}}
-          <li>
-            <a href="#" class={{if (eq t type) 'active'}} {{action (mut type) t}}>
-              By {{t}}
-            </a>
-          </li>
-        {{/each}}
-      </ul>
-    </div>
-
-    <div class="tab-content grid">
-      {{statistic-list
-        data               = data
-        type               = type
-        missingParams      = missingParams
-        ordering           = ordering
-        class              = 'grid-cell'
-        on-ordering-change = (action (mut ordering))
-      }}
-    </div>
+  <div class="tab-content grid">
+    {{statistic-list
+      data               = data
+      type               = type
+      missingParams      = missingParams
+      ordering           = ordering
+      class              = 'grid-cell'
+      on-ordering-change = (action (mut ordering))
+    }}
   </div>
-</div>
+{{/if}}
