Better wording for the no mobile message

--- a/app/components/no-mobile-message/template.hbs
+++ b/app/components/no-mobile-message/template.hbs
@@ -6,7 +6,7 @@
     device.
   </p>
   <p>
-    Try opening this page on a larger device. or take me back to
-    {{#link-to 'index'}}home{{/link-to}}!
+    Try opening this page on a larger device, or go back to the
+    {{#link-to 'index'}}home page{{/link-to}}!
   </p>
 </div>
