--- a/app/styles/filter-sidebar.scss
+++ b/app/styles/filter-sidebar.scss
@@ -18,24 +18,35 @@
   transform: translateX(0);
 }
 
+.filter-sidebar-content {
+  overflow-y: auto;
+  flex-grow: 1;
+}
+
+.filter-sidebar-content > .filter-sidebar-group:first-child > .filter-sidebar-group-label {
+  border-top: none;
+}
+
 .filter-sidebar-title {
   padding: 1rem;
   display: flex;
+  flex-shrink: 0;
   justify-content: space-between;
+  border-bottom: 1px solid var(--color-border);
   font-weight: 700;
 }
 
 .filter-sidebar-toggle {
   position: absolute;
   left: 0;
-  top: 2rem;
+  top: 1rem;
   transform: translateX(-100%);
   border: none;
   cursor: pointer;
   padding: 0;
   background: transparent;
-  width: 6rem;
-  height: 3.5rem;
+  width: 6.5rem;
+  height: 4rem;
   text-align: right;
   color: rgb(255,255,255);
   overflow: hidden;
@@ -52,7 +63,7 @@
   position: absolute;
   right: 0;
   top: .5rem;
-  height: 2.5rem;
+  height: 3rem;
 }
 
 .filter-sidebar-toggle-background {
@@ -66,7 +77,23 @@
 }
 
 .filter-sidebar-toggle-icon {
-  width: 2.5rem;
+  width: 3rem;
+}
+
+.filter-sidebar-toggle-icon > .fa {
+  font-size: 1.3rem;
+}
+
+.filter-sidebar-toggle-icon-badge {
+  position: absolute;
+  top: .5rem;
+  right: .5rem;
+  font-size: .6rem;
+  font-weight: bold;
+  background-color: var(--color-success);
+  padding: .1rem .3rem;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0,0,0,.2);
 }
 
 .filter-sidebar-toggle-text {
