--- a/app/analysis/edit/template.hbs
+++ b/app/analysis/edit/template.hbs
@@ -17,18 +17,20 @@
         <div class="card-block">
           {{#with intersection.lastSuccessful.value.model as |model|}}
             {{#validated-form
-              model     = (changeset model)
+              model     = (changeset model IntersectionValidations)
               on-submit = save
             as |f|}}
-              {{#f.input name='task' as |fi|}}
-                {{#task-selection
-                  on-set-task = fi.update
-                  initial     = (hash
-                    customer  = _customer
-                    project   = _project
-                    task      = _task
-                  )
-                as |t|}}
+              {{#task-selection
+                on-set-customer = (action (queue (action (mut f.model.customer)) (action 'validate' f.model)))
+                on-set-project  = (action (queue (action (mut f.model.project)) (action 'validate' f.model)))
+                on-set-task     = (action (queue (action (mut f.model.task)) (action 'validate' f.model)))
+                initial         = (hash
+                  customer      = _customer
+                  project       = _project
+                  task          = _task
+                )
+              as |t|}}
+                {{#f.input name='task' as |fi|}}
                   <div class="form-group" data-test-customer>
                     <label>
                       Customer
@@ -50,45 +52,45 @@
                     </label>
                     {{t.task}}
                   </div>
-                {{/task-selection}}
-              {{/f.input}}
+                {{/f.input}}
 
-              {{#f.input data-test-comment name='comment' as |fi|}}
-                <label>
-                  Comment
-                  {{#if (eq f.model.comment null)}}{{not-identical-warning}}{{/if}}
-                </label>
-                <input type="text" placeholder="Enter comment..." class="form-control" onchange={{action fi.update value='target.value'}} value={{fi.value}}>
-              {{/f.input}}
+                {{#f.input data-test-comment name='comment' as |fi|}}
+                  <label>
+                    Comment
+                    {{#if (eq f.model.comment null)}}{{not-identical-warning}}{{/if}}
+                  </label>
+                  <input type="text" placeholder="Enter comment..." class="form-control" onchange={{action fi.update value='target.value'}} value={{fi.value}}>
+                {{/f.input}}
 
-              {{#f.input data-test-not-billable name='notBillable' as |fi|}}
-                {{#sy-checkbox checked=fi.value on-change=fi.update}}
-                  Not billable
-                  {{#if (eq f.model.notBillable null)}}{{not-identical-warning}}{{/if}}
-                {{/sy-checkbox}}
-              {{/f.input}}
-
-              {{#f.input data-test-review name='review' as |fi|}}
-                {{#sy-checkbox checked=fi.value on-change=fi.update}}
-                  Needs Review
-                  {{#if (eq f.model.review null)}}{{not-identical-warning}}{{/if}}
-                {{/sy-checkbox}}
-              {{/f.input}}
-
-              {{#if (or (eq reviewer session.data.user.id) session.data.user.isSuperuser)}}
-                {{#f.input data-test-verified name='verified' as |fi|}}
+                {{#f.input data-test-not-billable name='notBillable' as |fi|}}
                   {{#sy-checkbox checked=fi.value on-change=fi.update}}
-                    Verfied
-                    {{#if (eq f.model.verified null)}}{{not-identical-warning}}{{/if}}
+                    Not billable
+                    {{#if (eq f.model.notBillable null)}}{{not-identical-warning}}{{/if}}
                   {{/sy-checkbox}}
                 {{/f.input}}
-              {{/if}}
 
-              <div class="text-right">
-                <button data-test-cancel type="button" class="btn" {{action 'cancel'}}>Cancel</button>
-                <button data-test-reset type="button" class="btn" {{action 'reset' f.model}}>Reset</button>
-                {{f.submit}}
-              </div>
+                {{#f.input data-test-review name='review' as |fi|}}
+                  {{#sy-checkbox checked=fi.value on-change=fi.update}}
+                    Needs Review
+                    {{#if (eq f.model.review null)}}{{not-identical-warning}}{{/if}}
+                  {{/sy-checkbox}}
+                {{/f.input}}
+
+                {{#if (or (eq reviewer session.data.user.id) session.data.user.isSuperuser)}}
+                  {{#f.input data-test-verified name='verified' as |fi|}}
+                    {{#sy-checkbox checked=fi.value on-change=fi.update}}
+                      Verfied
+                      {{#if (eq f.model.verified null)}}{{not-identical-warning}}{{/if}}
+                    {{/sy-checkbox}}
+                  {{/f.input}}
+                {{/if}}
+
+                <div class="text-right">
+                  <button data-test-cancel type="button" class="btn" {{action 'cancel'}}>Cancel</button>
+                  <button data-test-reset type="button" class="btn" {{action (queue t.reset (action 'reset' f.model))}}>Reset</button>
+                  {{f.submit}}
+                </div>
+              {{/task-selection}}
             {{/validated-form}}
           {{/with}}
         </div>
