--- a/app/statistics/template.hbs
+++ b/app/statistics/template.hbs
@@ -44,9 +44,9 @@
           User
           {{#fs.filter data-test-filter-user}}
             {{#user-selection
-              inactive  = true
-              user      = selectedUser
-              on-change = (action 'setModelFilter' 'user')
+              user          = selectedUser
+              on-change     = (action 'setModelFilter' 'user')
+              queryOptions  = (hash active=0)
             as |u|}}
               {{u.user}}
             {{/user-selection}}
@@ -56,8 +56,9 @@
           Reviewer
           {{#fs.filter data-test-filter-reviewer}}
             {{#user-selection
-              user      = selectedReviewer
-              on-change = (action 'setModelFilter' 'reviewer')
+              user          = selectedReviewer
+              on-change     = (action 'setModelFilter' 'reviewer')
+              queryOptions  = (hash is_reviewer=1)
             as |u|}}
               {{u.user placeholder='Select reviewer...'}}
             {{/user-selection}}
