--- a/app/users/index/template.hbs
+++ b/app/users/index/template.hbs
@@ -15,8 +15,9 @@
         Supervisor
         {{#fs.filter data-test-filter-user}}
           {{#user-selection
-            user      = selectedSupervisor
-            on-change = (perform setModelFilter 'supervisor')
+            user          = selectedSupervisor
+            on-change     = (perform setModelFilter 'supervisor')
+            queryOptions  = (hash active=1)
           as |u|}}
             {{u.user placeholder='Select supervisor...'}}
           {{/user-selection}}
