Remove else from users

--- a/app/users/index/template.hbs
+++ b/app/users/index/template.hbs
@@ -17,7 +17,7 @@
           {{#user-selection
             user          = selectedSupervisor
             on-change     = (perform setModelFilter 'supervisor')
-            queryOptions  = (hash is_supervisor=1)
+            queryOptions  = (hash is_supervisor=1 active=1)
           as |u|}}
             {{u.user placeholder='Select supervisor...'}}
           {{/user-selection}}
