Add computed for checking if allowed to verify

--- a/app/analysis/index/template.hbs
+++ b/app/analysis/index/template.hbs
@@ -183,7 +183,7 @@
           data-test-edit-all
           type="button"
           class="btn"
-          title={{unless editable 'Please set editable filter to enable edit all.'}}
+          title={{unless editable 'Please enable the "editable" filter to modify all entries at once.'}}
           disabled={{unless editable 'true'}}
           {{action 'edit'}}
         >
