--- a/app/analysis/edit/template.hbs
+++ b/app/analysis/edit/template.hbs
@@ -86,8 +86,8 @@
                   {{#sy-checkbox
                     checked=fi.value
                     on-change=fi.update
-                    title=(unless (or (eq reviewer session.data.user.id) session.data.user.isSuperuser) 'Please set reviewer filter to yourself to verify reports.')
-                    disabled=(unless (or (eq reviewer session.data.user.id) session.data.user.isSuperuser) 'true')
+                    title=(unless canVerify 'Please select yourself as "reviewer" to verify reports.')
+                    disabled=(unless canVerify 'true')
                   }}
                     Verified
                     {{#if (eq model.verified null)}}{{not-identical-warning}}{{/if}}
